--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Dit Navn</title>
+    <title>Oliver Fisker</title>
     <meta name="description" content="Portfolio" />
     <link rel="stylesheet" href="./styles.css" />
 </head>
 
 <body>
     <main class="wrap">
-        <h1>Dit Navn</h1>
+        <h1>Oliver Fisker</h1>
 
         <p class="muted">
-            Portfolio. Projekter og links.
+            Portfolio. Projekter og links dertil.
         </p>
 
         <h2>Projekter</h2>
@@ -24,8 +24,8 @@
         <hr />
 
         <p>
-            <a href="mailto:dinmail@eksempel.dk">dinmail@eksempel.dk</a><br />
-            <a href="https://github.com/<dit-brugernavn>" target="_blank" rel="noreferrer">GitHub</a>
+            <a href="mailto:fisker0205@outlook.com">fisker0205@outlook.com</a><br />
+            <a href="https://github.com/czhxxhgsrb-hub" target="_blank" rel="noreferrer">GitHub</a>
         </p>
     </main>
 
