--- a/projects/polsimulator/index.html
+++ b/projects/polsimulator/index.html
@@ -22,8 +22,7 @@
         <canvas id="c" width="800" height="800"></canvas>
 
         <p class="muted">
-            Demo i browseren (HTML canvas). Logikken er portet fra din .fsx (DIKU.Canvas kan ikke køre direkte på GitHub
-            Pages).
+            Political Simulator Demo. Originale projekt er lavet i F# og findes på GitHub.
         </p>
     </main>
 
