--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <hr />
 
         <p>
-            <a href="mailto:fisker0205@outlook.com">fisker0205@outlook.com</a><br />
+            <a href="mailto:Fisker0205@outlook.com">Fisker0205@outlook.com</a><br />
             <a href="https://github.com/czhxxhgsrb-hub" target="_blank" rel="noreferrer">GitHub</a>
         </p>
     </main>
