--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <h1>Oliver Fisker</h1>
 
         <p class="muted">
-            Portfolio. Projekter og links dertil.
+            Portfolie af projekter og links dertil. Jeg er nuværende i gang med mit første år af BSc i Machine Learning
+            og Datavidenskab, Københavns Universitet.
         </p>
 
         <h2>Projekter</h2>
